# uc-2

./: .env.example  .gitignore  BENCHMARKING_LOGIC.docx  BENCHMARKING_LOGIC.md  bencmark-agent.py  clear_pinecone_index.py  debug_cpi_update.py  fetch_cpi_rates.py  inspect_db_schema.py  main.py  pyproject.toml  quotation_extracted_items_add_commercials_cols.sql  quotation_extraction_reference.md  re_benchmark.py  re_benchmark_v2.py  re_commercials.py  re_inflation.py  requirements.txt  run_etl_sync.py  run_extraction.py  run_pipeline.py  run_pipeline_from_excel.py  satge 1to 3  stage 4 to 8  test  test_production_flow.py  worker node  ~$NCHMARKING_LOGIC.docx
agentcore_components/: .env.example  CANVAS_SETUP.md  __init__.py  azure_blob_file_ops.py  etl_sync.py  pipeline_stage_123.py  pipeline_stage_123_v2.py  pipeline_stage_123_v3 (1) (2).py  pipeline_stage_123_v3.py  pipeline_stage_123_v3_aditya.py  pipeline_stage_123_v3_aditya_v2.py  pipeline_stage_123_v3_gemini.py  pipeline_stage_123_v3_new (1).py  pipeline_stage_123_v3_new (2).py  pipeline_stage_123_v3_new (3).py  pipeline_stage_123_v3_new (4).py  pipeline_stage_123_v3_new (5).py  pipeline_stage_123_v3_new.py  pipeline_stage_123_v3_new_ut.py  pipeline_stage_58.py  pyproject.toml  requirements.txt  run_pipeline_local.py
attachment_blob_sync/: __main__.py  config.py  sync.py
db/: __init__.py  connection.py  crud.py  tables.py
embed_doc_extraction/: extractor.py
file_classifier/: config.py
migrations/: add_inflation_last_columns.sql  create_fn_clean_html.sql  create_vw_benchmark_summary.sql
pipeline/: __main__.py  attachment_classification_repository.py  change_detector.py  db_utils.py  models.py  orchestrator.py  repository.py  stage_registry.py  tracker.py
price_benchmark/: __init__.py  __main__.py  historical_fetcher.py  llm_client.py  models.py  pending_reader.py  reader.py  run.py  writer.py
purchase_sync/: config.py  db_manager.py  sync_manager.py
quotation_embedding/: config.py  embedding_client.py  pinecone_writer.py  reader.py  run.py
quotation_extraction/: __init__.py  __main__.py  blob_reader.py  config.py  context_builder.py  document_loader.py  extractor.py  llm_client.py  models.py  run.py  source_resolver.py  writer.py
reports/: classification_error_fixes_plan.md  generate_report.py  (+1 more)
utils/: __init__.py  (+4 more)
(+47 files in other folders)
