[project]
name = "purchase-sync"
version = "0.1.0"
description = "ETL sync module: on-prem SQL Server → Azure SQL (purchase requisition tables)"
requires-python = ">=3.8"
dependencies = [
    "pyodbc>=4.0.39",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "azure-storage-blob>=12.0.0",
    # embed_doc_extraction dependencies
    "olefile>=0.46",
    "py7zr>=0.20",
    "rarfile>=4.0",
    "PyMuPDF>=1.23",
]

